--- a/bean-scene/package.json
+++ b/bean-scene/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
+    "daisyui": "^5.0.43",
     "isbot": "^5.1.27",
+    "prop-type": "^0.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.5.3"
